--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint-config-react-app": "^6.0.0",
     "framer-motion": "^2.9.4",
     "jquery": "^3.5.1",
+    "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
